--- a/css/nivo-slider.css
+++ b/css/nivo-slider.css
@@ -95,10 +95,11 @@
 }
 .nivo-prevNav {
   left: 0px;
-  
+  display: none;
 }
 .nivo-nextNav {
   right: 0px;
+  display: none;
 }
 /* Control nav styles (e.g. 1,2,3...) */
 .nivo-controlNav {
