add login block

--- a/css/main.css
+++ b/css/main.css
@@ -276,5 +276,9 @@ dl#detail-menu-list ul li {
   width: 90px;
 }
 
+/***************** style for login block *****************************************/
+#login-block {
+  width: 200px;
+}
 
 
